--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,29 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            {{'title' | translate}}
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://beta.ionicframework.com/docs/">docs</a> will be your guide.</p>
+<ion-content>
+
+    <h2 padding>
+        {{'home' | translate}}
+    </h2>
+
+    <ion-list>
+        <ion-item>
+            <ion-label>{{'language' | translate}}</ion-label>
+            <ion-select [(ngModel)]="selectedLang" (ionChange)="changeLanguage(selectedLang)"
+                        [value]="selectedLang" okText="Okay" cancelText="Dismiss">
+                <ion-select-option value="en">English</ion-select-option>
+                <ion-select-option value="de">Македонски</ion-select-option>
+            </ion-select>
+        </ion-item>
+
+    </ion-list>
+
 </ion-content>
+
+
